# codex_test

./: .gitignore  .pre-commit-config.yaml  Dockerfile.back  Dockerfile.front  README.md  bootstrap.sh  docker-compose.yml  manage.py  mkdocs.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
accounts/: views.py
backend/: .env.example  pyproject.toml  pytest.ini
backend/accounts/: permissions.py  urls.py
backend/legal_ai/: asgi.py  health.py  settings.py  urls.py  wsgi.py
backend/legal_ai/llm/: client.py
backend/legal_ai/management/commands/: create_default_admin.py
backend/legalchat/: app.py  apps.py  models.py
backend/retrieval/: tasks.py  urls.py  views.py
backend/tests/: test_health.py  test_logout.py  test_search.py
chat/: consumers.py  routing.py
docs/: ARCHITECTURE.md  SECURITY.md  index.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: AdminPanel.tsx  App.test.tsx  App.tsx  ChatWindow.tsx  CitationsDrawer.tsx  DocumentsUpload.tsx  Login.tsx  ProtectedRoute.tsx
frontend/tests/: example.spec.ts
legal_ai/: asgi.py  celery.py  settings.py  urls.py
legal_ai/llm/: __init__.py
prompts/: base.jinja2
retrieval/: models.py  urls.py  views.py
