[tool.poetry]
name = "legal-ai-backend"
version = "0.1.0"
description = "Legal AI backend"
authors = ["TODO <todo@example.com>"]
packages = [
    { include = "accounts" },
    { include = "chat" },
    { include = "retrieval" },
    { include = "legal_ai" },
    { include = "legalchat" }
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2"
djangorestframework = "^3.14"
djangorestframework-simplejwt = "^5.3"
channels = "^4.0"
channels-redis = "^4.1"
redis = "^5.0"
jinja2 = "^3.1"
openai = "^1.23"
transformers = "^4.39"
sentence-transformers = "^2.2"
celery = "^5.3"
pgvector = "^0.2"
drf-spectacular = "^0.27"
psycopg2-binary = "^2.9"
gunicorn = "^21.2"
"pdfminer.six" = "^20221105"
python-docx = "^1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-django = "^4.8"
pytest-cov = "^4.1"
mypy = "^1.8"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
strict = true
